# franz

./: .gitignore  LICENSE  README.md  pyproject.toml
adapters/daws/: README.md
adapters/daws/reaper/: check_param_map.py  dump_params.py  launch_reaper.sh  reaper_adapter.py  serve.py
adapters/plugins/: README.md
adapters/plugins/pigments/: SETUP.md  instructions.md  parameters.yaml  signal_flow.md  vocabulary.yaml
franz_mcp/: __init__.py  adapter.py  knowledge.py  server.py  tools.py
