[project]
name = "franz"
version = "0.1.0"
description = "A synth sound-design assistant: an LLM diagnoses and surgically adjusts Pigments parameters in Reaper via MCP."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "python-reapy>=0.10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Added in M2; the official SDK, not the third-party `fastmcp` package (see PLAN §5).
mcp = [
    "mcp>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["franz_mcp", "adapters"]

[project.scripts]
franz-serve = "adapters.daws.reaper.serve:main"
franz-dump = "adapters.daws.reaper.dump_params:main"
franz-checkmap = "adapters.daws.reaper.check_param_map:main"

[tool.uv]
# reapy is old; pin an interpreter it actually supports rather than the system 3.14.
