[project]
name = "franz"
version = "0.1.0"
description = "An LLM sound-design assistant for synth plugins, via MCP."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "mcp>=1.2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Pull only what your target DAW needs. Each adapter declares its own extra.
reaper = [
    "python-reapy>=0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["franz_mcp", "adapters"]

[project.scripts]
# One launcher per DAW adapter. New adapters add their own (e.g. franz-ableton).
franz-reaper = "adapters.daws.reaper.serve:main"

[tool.uv]
# reapy is old; pin an interpreter it actually supports rather than the system 3.14.
